@@ -14,7 +14,7 @@ module Spec
       TINY   = 2
       # RELEASE_CANDIDATE = "RC1"
       
-      # RANDOM_TOKEN: 0.375509844656552
+      # RANDOM_TOKEN: 0.363269128254831
       REV = "$LastChangedRevision$".match(/LastChangedRevision: (\d+)/)[1]
 
       STRING = [MAJOR, MINOR, TINY].join('.')
